--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,15 @@
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
 * text=auto
-
+*.c crlf diff 
+*.cc crlf diff 
+*.cxx crlf diff 
+*.cpp crlf diff 
+*.c++ crlf diff 
+*.hpp crlf diff
+*.h crlf diff 
+*.h++ crlf diff 
+*.hh crlf diff
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
